[package]
name = "mwck"
version = "0.1.0"
edition = "2021"
authors = ["mononaut"]
license = "GNU Affero General Public License v3.0"
description = "mempool.space wallet connector kit"
keywords = ["bitcoin", "mempool"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "^0.4"
bitcoin = { version = "0.30", features = ["serde", "std"], default-features = false }
futures-util = { version = "0.3.28", features = ["sink", "alloc"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = { package = "hex-conservative", version = "0.1.1", default-features = false }
esplora-client = { version = "0.6", features = ["async"], default-features = false }
wasm-bindgen-futures = "0.4.37"
delegate = "0.10.0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.10.0"
tokio = { version = "1.20.1", features = ["rt-multi-thread", "time", "macros", "sync", "signal"] }
tokio-tungstenite = "0.20.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = { version = "0.4.33" }
instant = { version = "0.1", features = ["wasm-bindgen"] }
tokio = { version = "1.20.1", features = ["rt", "time", "macros", "sync"] }
ws_stream_wasm = { version = "0.7.4", default-features = false }
web-sys = { version = "0.3.60" }
js-sys = { version = "0.3.60" }

