[package]
name = "wasm_wallet_watcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
mwck = { version = "0.1.0", path = "../../" }
log = "^0.4"
bitcoin = { version = "0.29.2", features = ["serde", "std"], default-features = false }
tokio = { version = "1.20.1", features = ["rt", "time", "macros", "sync"] }
wasm-logger = "0.2.0"
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = { version = "0.4.33" }
serde-wasm-bindgen = "0.6.0"
js-sys = { version = "0.3.60" }